--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "this is a graphql auth with jwt and mysql",
-  "main": "src/main.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gracebir/react-auth-jwt.git"
-  },
-  "author": "GraceTech",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gracebir/react-auth-jwt/issues"
-  },
-  "homepage": "https://github.com/gracebir/react-auth-jwt#readme"
+   "name": "server",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "devDependencies": {
+      "ts-node": "3.3.0",
+      "@types/node": "^8.0.29",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "typeorm": "0.2.38",
+      "reflect-metadata": "^0.1.10",
+      "mysql": "^2.14.1"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts"
+   }
 }
