--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,24 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@types/express": "^4.17.13",
+      "@types/graphql": "^14.5.0",
       "@types/node": "^8.0.29",
+      "nodemon": "^2.0.13",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.38",
+      "apollo-server-express": "^2.9.9",
+      "express": "^4.17.1",
+      "graphql": "^15.6.1",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "type-graphql": "^1.1.1",
+      "typeorm": "0.2.38"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "dev": "nodemon --exec ts-node src/index.ts"
    }
 }
