--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,11 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
+      "@types/dotenv": "^8.2.0",
       "@types/express": "^4.17.13",
       "@types/graphql": "^14.5.0",
+      "@types/jsonwebtoken": "^8.5.5",
       "@types/node": "^8.0.29",
       "nodemon": "^2.0.13",
       "ts-node": "3.3.0",
@@ -12,8 +15,11 @@
    },
    "dependencies": {
       "apollo-server-express": "^2.9.9",
+      "bcryptjs": "^2.4.3",
+      "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "graphql": "^15.6.1",
+      "jsonwebtoken": "^8.5.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^1.1.1",
