--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@types/cookie-parser": "^1.4.2",
       "apollo-server-express": "^2.9.9",
       "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.5",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "graphql": "^15.6.1",
